--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
 			<scope>test</scope>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.springframework.amqp</groupId>
+			<artifactId>spring-rabbit-stream</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
