--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=restaurant_service
 spring.datasource.url=jdbc:postgresql://localhost:5432/restaurant
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=19923016
 spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
