--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -10,14 +10,13 @@ jobs:
       packages: write
     services:
       postgres:
-        image: postgres:12.2
+        image: postgres:latest
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: restaurant
         ports:
-          - 5432/tcp
-        # needed because the postgres container does not provide a healthcheck
+          - 5432/5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
       - uses: actions/checkout@v4
