--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -25,6 +25,14 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
       - name: Build with Maven
+        env:
+          # use postgres for the host here because we have specified a contaienr for the job.
+          # If we were running the job on the VM this would be localhost
+          PG_HOST: postgres
+          PG_USER: postgres
+          PG_DATABASE: postgres
+          PG_PASSWORD: postgres
+          PG_PORT: ${{ job.services.postgres.ports['5432'] }}
         run: mvn -B package --file pom.xml
 
       # - name: Publish package
