--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.itep</groupId>
 	<artifactId>restaurant_service</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>restaurant_service</name>
 	<description>Restaurant service project for information technology enhancement program</description>
 	<properties>
