workflow add work in relase

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,11 @@
 name: CI
 
 on:
-  push:
-    branches:
-      - category-test
+  release:
+    types: [ created ]
+#  push:
+#    branches:
+#      - category-test
 
 jobs:
   build:
