--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Restaurant service project for information technology enhancement program</description>
 	<properties>
 		<java.version>17</java.version>
+		<cucumber.version>7.15.0</cucumber.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -54,6 +55,10 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
@@ -62,14 +67,35 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
-        </dependency>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
+			<groupId>org.junit.platform</groupId>
+			<artifactId>junit-platform-suite</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-java</artifactId>
+			<version>${cucumber.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-spring</artifactId>
+			<version>${cucumber.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-junit-platform-engine</artifactId>
+			<version>${cucumber.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.wiremock</groupId>
+			<artifactId>wiremock-standalone</artifactId>
+			<version>3.3.1</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -88,6 +114,119 @@
 						</exclude>
 					</excludes>
 				</configuration>
+			</plugin>
+<!--			<plugin>-->
+<!--				<groupId>org.jacoco</groupId>-->
+<!--				<artifactId>jacoco-maven-plugin</artifactId>-->
+<!--				<version>0.8.8</version>-->
+<!--				<executions>-->
+<!--					<execution>-->
+<!--						<goals>-->
+<!--							<goal>prepare-agent</goal>-->
+<!--						</goals>-->
+<!--					</execution>-->
+<!--					<execution>-->
+<!--						<id>report</id>-->
+<!--						<phase>prepare-package</phase>-->
+<!--						<goals>-->
+<!--							<goal>report</goal>-->
+<!--						</goals>-->
+<!--					</execution>-->
+<!--					<execution>-->
+<!--						<id>jacoco-check</id>-->
+<!--						<goals>-->
+<!--							<goal>check</goal>-->
+<!--						</goals>-->
+<!--						<configuration>-->
+<!--							<rules>-->
+<!--								<rule>-->
+<!--									<element>CLASS</element>-->
+<!--									<limits>-->
+<!--										<limit>-->
+<!--											<counter>LINE</counter>-->
+<!--											<value>COVEREDRATIO</value>-->
+<!--											<minimum>0.999</minimum>-->
+<!--										</limit>-->
+<!--										<limit>-->
+<!--											<counter>BRANCH</counter>-->
+<!--											<value>COVEREDRATIO</value>-->
+<!--											<minimum>0.999</minimum>-->
+<!--										</limit>-->
+<!--									</limits>-->
+<!--									<excludes>-->
+<!--										<exclude>com.itep.restaurant_service.RestaurantServiceApplication</exclude>-->
+<!--										<exclude>com.itep.restaurant_service.models.*</exclude>-->
+<!--										<exclude>com.itep.restaurant_service.repositories.*</exclude>-->
+<!--										<exclude>com.itep.restaurant_service.security.*</exclude>-->
+<!--										<exclude>com.itep.restaurant_service.web.*</exclude>-->
+<!--									</excludes>-->
+<!--								</rule>-->
+<!--							</rules>-->
+<!--						</configuration>-->
+<!--					</execution>-->
+<!--				</executions>-->
+<!--			</plugin>-->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<parameters>true</parameters>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.2.5</version>
+				<configuration>
+					<properties>
+						<!-- Work around. Surefire does not include enough information to disambiguate between different
+                             examples. -->
+						<configurationParameters>
+							cucumber.junit-platform.naming-strategy=long
+						</configurationParameters>
+					</properties>
+					<excludes>
+						<exclude>**/CucumberConfiguration.java</exclude>
+						<exclude>**/*IT.java</exclude>
+					</excludes>
+					<argLine>${argLine} -Dfile.encoding=UTF-8</argLine>
+					<skipAfterFailureCount>1</skipAfterFailureCount>
+				</configuration>
+				<executions>
+					<execution>
+						<id>integration-test</id>
+						<goals>
+							<goal>test</goal>
+						</goals>
+						<phase>
+							integration-test
+						</phase>
+						<configuration>
+							<excludes>
+								<exclude>none</exclude>
+							</excludes>
+							<includes>
+								<include>**/*IT.java</include>
+							</includes>
+						</configuration>
+					</execution>
+					<execution>
+						<id>acceptance-test</id>
+						<goals>
+							<goal>test</goal>
+						</goals>
+						<phase>verify</phase>
+						<configuration>
+							<excludes>
+								<exclude>none</exclude>
+							</excludes>
+							<includes>
+								<include>**/CucumberConfiguration.java</include>
+							</includes>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
