--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,18 @@
 name: CI
 
 on:
-  release:
-    types: [ created ]
-#  push:
-#    branches:
-#      - category-test
+#  release:
+#    types: [ created ]
+  push:
+    branches:
+      - workflow-building
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: read
+      packages: write
     services:
       postgres:
         image: postgres:latest
@@ -49,3 +51,4 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
+
