--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Save JAR file
         run: mv target/*.jar app.jar
-        working-directory: ./Group-3-Restaurant-Service
+#        working-directory: ./your-project-directory
 
       - name: Run tests
         run: mvn test --file pom.xml
