--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,18 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jdbc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-docker-compose</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
@@ -198,7 +207,7 @@
 						<exclude>**/CucumberConfiguration.java</exclude>
 						<exclude>**/*IT.java</exclude>
 					</excludes>
-					<argLine>${argLine} -Dfile.encoding=UTF-8</argLine>
+					<argLine> -Dfile.encoding=UTF-8</argLine>
 					<skipAfterFailureCount>1</skipAfterFailureCount>
 				</configuration>
 				<executions>
