--- a/compose.yaml
+++ b/compose.yaml
@@ -17,10 +17,10 @@ services:
     restart: always
     environment:
       POSTGRES_DB: restaurant
-      POSTGRES_USER: odoo15
-      POSTGRES_PASSWORD: azzadeen
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
     ports:
-      - "5431:5432"
+      - "5432:5432"
     expose:
       - "5432"
 
@@ -36,5 +36,5 @@ services:
       - "8080:8080"
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/restaurant
-      SPRING_DATASOURCE_USERNAME: odoo15
-      SPRING_DATASOURCE_PASSWORD: azzadeen
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: postgres
