--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,6 @@
-#spring.application.name=restaurant_service
-#spring.datasource.url=jdbc:postgresql://localhost:5431/restaurant
-#spring.datasource.username=postgres
-#spring.datasource.password=postgres
-#spring.jpa.hibernate.ddl-auto=create-drop
-##spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.application.name=restaurant_service
+spring.datasource.url=jdbc:postgresql://localhost:5431/restaurant
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
