--- a/.github/workflows/java-ci.yml
+++ b/.github/workflows/java-ci.yml
@@ -71,6 +71,17 @@ jobs:
       contents: write
       pull-requests: write
       repository-projects: write
+    services:
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: restaurant
+        ports:
+          - 5431:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
     steps:
       - uses: actions/checkout@v4
       - name: Set up JDK 17
