--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #spring.application.name=restaurant_service
-#spring.datasource.url=jdbc:postgresql://postgres:48573/restaurant
-#spring.datasource.username=odoo15
-#spring.datasource.password=azzadeen
+#spring.datasource.url=jdbc:postgresql://localhost:5431/restaurant
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
 #spring.jpa.hibernate.ddl-auto=update
 ##spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
