--- a/compose.yaml
+++ b/compose.yaml
@@ -1,40 +1,68 @@
+
+#version: '3.8'
+#
 #services:
 #  postgres:
-#    image: 'postgres:latest'
+#    image: postgres:latest
+#    container_name: postgres_db
+#    restart: always
 #    environment:
-#      - 'POSTGRES_DB=restaurant'
-#      - 'POSTGRES_PASSWORD=postgres'
-#      - 'POSTGRES_USER=postgres'
+#      POSTGRES_DB: restaurant
+#      POSTGRES_USER: postgres
+#      POSTGRES_PASSWORD: postgres
 #    ports:
-#      - '5432'
+#      - "5432:5432"
+#    expose:
+#      - "5432"
 #
-version: '3.8'
+#  restaurantservice:
+#    depends_on:
+#      - postgres
+#    build:
+#      context: .
+#      dockerfile: Dockerfile
+#    container_name: restaurant-service
+#    restart: always
+#    ports:
+#      - "8081:8080"
+#    environment:
+#      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres-db:5432/restaurant
+#      SPRING_DATASOURCE_USERNAME: postgres
+#      SPRING_DATASOURCE_PASSWORD: postgres
 
-services:
-  postgres:
-    image: postgres:latest
-    container_name: postgres_db
-    restart: always
-    environment:
-      POSTGRES_DB: restaurant
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-    ports:
-      - "5431:5432"
-    expose:
-      - "5432"
-
-  restaurantservice:
-    depends_on:
-      - postgres
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: restaurant-service
-    restart: always
-    ports:
-      - "8080:8080"
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/restaurant
-      SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: postgres
+#version: '3.8'
+#
+#services:
+#  postgres-db:
+#    image: postgres:latest
+#    container_name: postgres-db
+##    restart: always
+#    ports:
+#      - "5432:5432"
+#    expose:
+#      - "5432"
+#    env_file:
+#      - .env
+#    volumes:
+#      - postgres-db:/var/lib/postgresql/data
+#
+#
+#
+#  restaurant-service:
+#    image: restaurant-service
+#    container_name: restaurant-service
+#    restart: always
+#    env_file:
+#      - .env
+#    ports:
+#      - "22622:8082"
+#      - "22922:8081"
+#    depends_on:
+#      - postgres-db
+#    build:
+#      context: .
+#      dockerfile: Dockerfile
+#
+#volumes:
+#  postgres-db:
+#
